[gd_scene load_steps=3 format=3 uid="uid://skill_tree_ui"]

[ext_resource type="Script" path="res://scenes/ui/skill_tree_ui.gd" id="1"]
[ext_resource type="Script" path="res://scenes/ui/skill_node_ui.gd" id="2"]

[node name="SkillTreeUI" type="CanvasLayer"]
layer = 10
script = ExtResource("1")

[node name="Background" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.02, 0.02, 0.06, 0.95)

[node name="MainPanel" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 10.0
offset_right = -20.0
offset_bottom = -10.0

[node name="TopSection" type="VBoxContainer" parent="MainPanel"]
layout_mode = 2
size_flags_vertical = 0
add_theme_constant_override/separation = 4

[node name="TitleRow" type="HBoxContainer" parent="MainPanel/TopSection"]
layout_mode = 2
add_theme_constant_override/separation = 20

[node name="Title" type="Label" parent="MainPanel/TopSection/TitleRow"]
layout_mode = 2
text = "SKILL TREES"
add_theme_font_size_override/font_size = 24
add_theme_color_override/font_color = Color(0.9, 0.85, 0.7, 1)

[node name="LevelLabel" type="Label" parent="MainPanel/TopSection/TitleRow"]
layout_mode = 2
text = "LEVEL 1"
add_theme_font_size_override/font_size = 18
add_theme_color_override/font_color = Color(1, 0.85, 0.3, 1)

[node name="XPBar" type="ProgressBar" parent="MainPanel/TopSection"]
layout_mode = 2
custom_minimum_size = Vector2(0, 16)
max_value = 100.0
value = 0.0
show_percentage = false

[node name="XPLabel" type="Label" parent="MainPanel/TopSection"]
layout_mode = 2
text = "0 / 100 XP"
horizontal_alignment = 1
add_theme_font_size_override/font_size = 11
add_theme_color_override/font_color = Color(0.6, 0.6, 0.7, 1)

[node name="SkillPointsLabel" type="Label" parent="MainPanel/TopSection"]
layout_mode = 2
text = "SKILL POINTS: 0"
horizontal_alignment = 1
add_theme_font_size_override/font_size = 14
add_theme_color_override/font_color = Color(0.5, 0.5, 0.6, 1)

[node name="TopSeparator" type="HSeparator" parent="MainPanel/TopSection"]
layout_mode = 2
custom_minimum_size = Vector2(0, 8)

[node name="ContentSection" type="HBoxContainer" parent="MainPanel"]
layout_mode = 2
offset_top = 120.0
offset_bottom = -50.0
size_flags_vertical = 3
add_theme_constant_override/separation = 16

[node name="TreesScroll" type="ScrollContainer" parent="MainPanel/ContentSection"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 3.0
horizontal_scroll_mode = 2
vertical_scroll_mode = 2

[node name="TreesContainer" type="HBoxContainer" parent="MainPanel/ContentSection/TreesScroll"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
add_theme_constant_override/separation = 12

[node name="DetailPanel" type="PanelContainer" parent="MainPanel/ContentSection"]
visible = false
layout_mode = 2
custom_minimum_size = Vector2(280, 0)
size_flags_horizontal = 0
size_flags_stretch_ratio = 1.0

[node name="DetailVBox" type="VBoxContainer" parent="MainPanel/ContentSection/DetailPanel"]
layout_mode = 2
add_theme_constant_override/separation = 10

[node name="DetailName" type="Label" parent="MainPanel/ContentSection/DetailPanel/DetailVBox"]
layout_mode = 2
text = "Skill Name"
add_theme_font_size_override/font_size = 18
add_theme_color_override/font_color = Color(1, 1, 1, 1)

[node name="DetailType" type="Label" parent="MainPanel/ContentSection/DetailPanel/DetailVBox"]
layout_mode = 2
text = "[PASSIVE]"
add_theme_font_size_override/font_size = 11
add_theme_color_override/font_color = Color(0.6, 0.6, 0.7, 1)

[node name="DetailSep1" type="HSeparator" parent="MainPanel/ContentSection/DetailPanel/DetailVBox"]
layout_mode = 2

[node name="DetailDesc" type="Label" parent="MainPanel/ContentSection/DetailPanel/DetailVBox"]
layout_mode = 2
text = "Skill description goes here."
autowrap_mode = 2
add_theme_font_size_override/font_size = 12
add_theme_color_override/font_color = Color(0.75, 0.75, 0.8, 1)

[node name="DetailSep2" type="HSeparator" parent="MainPanel/ContentSection/DetailPanel/DetailVBox"]
layout_mode = 2

[node name="DetailCurrent" type="Label" parent="MainPanel/ContentSection/DetailPanel/DetailVBox"]
layout_mode = 2
text = "Status: LOCKED"
add_theme_font_size_override/font_size = 12
add_theme_color_override/font_color = Color(0.6, 0.6, 0.7, 1)

[node name="DetailNext" type="Label" parent="MainPanel/ContentSection/DetailPanel/DetailVBox"]
layout_mode = 2
text = "Effect: +2% Speed"
add_theme_font_size_override/font_size = 12
add_theme_color_override/font_color = Color(0.8, 0.8, 0.9, 1)

[node name="DetailReqLevel" type="Label" parent="MainPanel/ContentSection/DetailPanel/DetailVBox"]
layout_mode = 2
text = "Required Level: 1"
add_theme_font_size_override/font_size = 12
add_theme_color_override/font_color = Color(0.6, 0.6, 0.7, 1)

[node name="DetailPrereqs" type="Label" parent="MainPanel/ContentSection/DetailPanel/DetailVBox"]
layout_mode = 2
text = "Prerequisites: None"
autowrap_mode = 2
add_theme_font_size_override/font_size = 11
add_theme_color_override/font_color = Color(0.5, 0.5, 0.6, 1)

[node name="SpacerDetail" type="Control" parent="MainPanel/ContentSection/DetailPanel/DetailVBox"]
layout_mode = 2
size_flags_vertical = 3

[node name="UnlockButton" type="Button" parent="MainPanel/ContentSection/DetailPanel/DetailVBox"]
layout_mode = 2
custom_minimum_size = Vector2(0, 40)
text = "UNLOCK (1 SP)"

[node name="BottomSection" type="HBoxContainer" parent="MainPanel"]
layout_mode = 2
offset_top = -50.0
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_bottom = 0.0
add_theme_constant_override/separation = 20

[node name="HintLabel" type="Label" parent="MainPanel/BottomSection"]
layout_mode = 2
size_flags_horizontal = 3
text = "Select a skill to view details. [ESC] to close."
add_theme_font_size_override/font_size = 11
add_theme_color_override/font_color = Color(0.4, 0.4, 0.5, 1)

[node name="BackButton" type="Button" parent="MainPanel/BottomSection"]
layout_mode = 2
custom_minimum_size = Vector2(120, 36)
text = "BACK"
